@@ -626,3 +626,4 @@ different panes. Tie/untie option added for notes. Broken rhythm
 - Fixed: Removed loading of NONEXISTANT_FILE for all players except wxmediaplayer
 - Added 'Insert musical symbol' again to the menu again which was removed in 1.3.8.4. Although ABC Assist can insert musical with less hassle, some users really like the old
   menu version. For Linux (Gnome) users these menus are still empty but that is caused by Gnome, not EasyABC.
+- Fixed: Playing selection gave an error: AttributeError: 'bytes' object has no attribute 'encode'  (https://github.com/jwdj/EasyABC/issues/69)
